2006-08-28  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/interface.c: Fixed typo in a tooltip text.
 * THANKS, src/about.c: Added translator credits.


2006-08-27  Frank Lanitz  <frank@frank.uvena.de>

 * configure.in, po/cs.po:
   Added Czech translation (Thanks Petr Messner).


2006-08-27  Enrico Tröger  <enrico.troeger@uvena.de>

 * tagmanager/parsers.h, tagmanager/c.c, data/filetype_extensions.conf,
   data/filetypes.diff, data/filetypes.ferite, src/highlighting.c,
   src/filetypes.c, src/msgwindow.c:
   Added new filetypes Diff and Ferite.
 * src/search.c: Applied patch from Stefan Oltmanns to add the
                 possibility to keep the Replace dialog open.


2006-08-26  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/geany.h, src/main.c, src/utils.c:
   Fixed weird behaviour of Save all tool button and menu item.
 * src/document.c:
   Fixed missing styling settings on new files (needs to be tested).
   Now the filetype sub menu in the document file menu will be updated
   when the filetype is set by the filename on new files.


2006-08-23  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/prefs.c, src/vte.c:
   Added new VTE settings to the preferences dialog.
   Improved ignore menu bar accelerator setting.
   Keep current working directory when restarting the VTE
   (happens when hitting Ctrl+C).
 * src/document.c: Added counter when using "Replace All" and display
                   the count of replacements in the status window.


2006-08-23  Frank Lanitz  <frank@frank.uvena.de>

 * src/highlighting.c, data/pascal.tags:
   Added auto completion for PASCAL.
 * data/latex.tags: Update of catalog.


2006-08-22  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/callbacks.c: Fix quit confirmation message with no files open.


2006-08-22  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/vte.c, src/prefs.c, src/keyfile.c, src/utils.c:
   Save all VTE settings in an own VTE section in the configuration